package MachineCoding_LLD.LLD_Interview_Problems._07_Medium_BookMyShow.model;

/** A city users search within. */
public record City(String id, String name) { }
