package MachineCoding_LLD.LLD_Interview_Problems._07_Medium_BookMyShow.model;

/** A film in the catalog. */
public record Movie(String id, String title, String language, int runtimeMinutes) { }
